# gov-oracle

./: .env.example  .gitignore  README.md  docker-compose.yml
agents/: README.md  alembic.ini  pyproject.toml
agents/migrations/: env.py
agents/migrations/versions/: 0001_initial_schema.py  0002_question_answers.py
agents/src/gov_oracle_agents/: __init__.py  config.py  oracle.py  run.py  seeding.py
agents/src/gov_oracle_agents/agents/: __init__.py  daily_notes.py  document_extraction.py  event_extraction.py  failed_questions.py  knowledge_graph.py  resolver.py  scoring.py  source_discovery.py  source_monitor.py
agents/src/gov_oracle_agents/crawling/: __init__.py  fetcher.py  links.py  pdf.py  robots.py
agents/src/gov_oracle_agents/llm/: __init__.py  base.py  openai_client.py  rule_based.py
agents/src/gov_oracle_agents/models/: __init__.py  report.py
agents/src/gov_oracle_agents/seeds/: __init__.py  bangladesh.py  registry.py
agents/src/gov_oracle_agents/storage/: __init__.py  db.py  orm.py
agents/src/gov_oracle_agents/utils/: __init__.py  text.py
agents/tests/: conftest.py  test_config_validation.py  test_crawling.py  test_deep_crawl.py  test_llm_resilience.py  test_models.py  test_pipeline.py  test_registry.py  test_text_utils.py
app/backend/: requirements.txt  wsgi.py
app/frontend/: .env.example  package-lock.json  package.json
scripts/: run_study.py
seed/: sample_report.json  seed_all.py  seed_bangladesh.py
study_output/2026-07-06_ten_country_study_llm/: BD_government_of_bangladesh.json  BR_federal_government_of_brazil.json  run_meta.json  (+10 more)
(+25 files in other folders)
