[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gov-oracle-agents"
version = "0.1.0"
description = "AI-assisted public-information audit agents: government transparency notes, scores, and evidence trails."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pypdf>=4.2",
    "pymysql>=1.1",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "rq>=1.16",
]

[project.optional-dependencies]
full = [
    "trafilatura>=1.8",
    "playwright>=1.44",
]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
gov-oracle = "gov_oracle_agents.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
